--- a/post.html
+++ b/post.html
@@ -25,11 +25,16 @@
         </div>
 
         <ul id="navigation">
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Hello</a></li>
         </ul>
     </div>
     <div class="main-container">
-        <h3>Hi guys, this is my blog post.</h3>
+        <h3>Hi, for collaboration, recruitment or gigs.</h3>
+        <p>Reach out through any of the following means:</p>
+        <p>My Email: adebiyijohn07@gmail.com</p>
+        <p>Phone: +234-8181542961</p>
+        <p>LinkedIn: linkedin.com/in/adebiyijohn07</p>
+        <p>Github: github.com/Adebiyi07</p>
     </div>
     
 </body>
