--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://use.fontawesome.com/b60d982de7.js"></script>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <link id="theme-style" rel="stylesheet" href="">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
