--- a/post.html
+++ b/post.html
@@ -32,7 +32,7 @@
         <h3>Hi, for collaboration, recruitment or gigs.</h3>
         <p>Reach out through any of the following means:</p>
         <p>My Email: adebiyijohn07@gmail.com</p>
-        <p>Phone: +234-8181542961</p>
+<!--         <p>Phone: +234-8181</p> -->
         <p>LinkedIn: linkedin.com/in/adebiyijohn07</p>
         <p>Github: github.com/Adebiyi07</p>
     </div>
