--- a/post.html
+++ b/post.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blue.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,6 @@
         <h3>Hi, for collaboration, recruitment or gigs.</h3>
         <p>Reach out through any of the following means:</p>
         <p>My Email: adebiyijohn07@gmail.com</p>
-<!--         <p>Phone: +234-8181</p> -->
         <p>LinkedIn: linkedin.com/in/adebiyijohn07</p>
         <p>Github: github.com/Adebiyi07</p>
     </div>
