--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p>I help market your brand through amazing websites.</p>
                     <hr>
                     <h4>Top Skills</h4>
-                    <p>Fullstack developer React and Django: <a target="_blank" href="#">Download Resume</a></p>
+                    <p>Fullstack Developer; React and Django: <a target="_blank" href="#">Download Resume</a></p>
 
                     <div id="skills">
                         <ul>
@@ -99,7 +99,7 @@
                             <li>HTML5</li>
                             <li>CSS3</li>
                             <li>Git and Github</li>
-                            <li>Heroku</li>
+                            <li>Tailwind</li>
                             <li>Figma</li>
                         </ul>
                     </div>
@@ -184,7 +184,7 @@
                 <label for="message">Message</label>
                 <textarea class="input-field" type="text" name="message" id="message"></textarea>
 
-                <input id="submit-btn" type="submit" value="send">
+                <input id="submit-btn" type="submit" value="Send">
             </form>
         </div>
     </section>
