--- a/post.html
+++ b/post.html
@@ -30,7 +30,7 @@
     </div>
     <div class="main-container">
         <h3>Hi, for collaboration, recruitment or gigs.</h3>
-        <p>Reach out through any of the following means:</p>
+        <h6>Reach out through any of the following means:</h6>
         <p>My Email: adebiyijohn07@gmail.com</p>
         <p>LinkedIn: linkedin.com/in/adebiyijohn07</p>
         <p>Github: github.com/Adebiyi07</p>
