--- a/post.html
+++ b/post.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Roboto:wght@500&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="nav-wrap">
-        <div class="dots-wrap">
-            <div id="dot-1" class="browser-dot"></div>
-            <div id="dot-2" class="browser-dot"></div>
-            <div id="dot-3" class="browser-dot"></div>
-        </div>
+      <div class="dots-wrap">
+        <div id="dot-1" class="browser-dot"></div>
+        <div id="dot-2" class="browser-dot"></div>
+        <div id="dot-3" class="browser-dot"></div>
+      </div>
 
-        <ul id="navigation">
-            <li><a href="#">Hello</a></li>
-        </ul>
+      <ul id="navigation">
+        <li><a href="#">Hello</a></li>
+      </ul>
     </div>
     <div class="main-container">
-        <h3>Hi, for collaboration, recruitment or gigs.</h3>
-        <h6>Reach out through any of the following means:</h6>
-        <p>My Email: adebiyijohn07@gmail.com</p>
-        <p>LinkedIn: linkedin.com/in/adebiyijohn07</p>
-        <p>Github: github.com/Adebiyi07</p>
+      <h3>Hi, for collaboration, recruitment or gigs.</h3>
+      <h6>Reach out through any of the following means:</h6>
+      <p>My Email: adebiyijohn07@gmail.com</p>
+      <p>LinkedIn: linkedin.com/in/adebiyijohn07</p>
+      <p>Github: github.com/Adebiyi07</p>
+      <p>Check out my blogs: <a href="blogs.html">My Blog</a></p>
     </div>
-    
-</body>
+  </body>
 </html>
