--- a/post.html
+++ b/post.html
@@ -40,7 +40,7 @@
       <p>My Email: adebiyijohn07@gmail.com</p>
       <p>LinkedIn: linkedin.com/in/adebiyijohn07</p>
       <p>Github: github.com/Adebiyi07</p>
-      <p>Check out my blogs: <a href="blogs.html">My Blog</a></p>
+      <!-- <p>Check out my blogs: <a href="blogs.html">My Blog</a></p> -->
     </div>
   </body>
 </html>
