--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <li>CSS3</li>
                 <li>Git and Github</li>
                 <li>Tailwind</li>
-                <li>Figma</li>
+                <li>WordPress</li>
               </ul>
             </div>
           </div>
