--- a/post.html
+++ b/post.html
@@ -36,6 +36,7 @@
     </div>
     <div class="main-container">
       <h3>Hi, for collaboration, recruitment or gigs.</h3>
+      <h6>Fulltime, part-time or contract basis,</h6>
       <h6>Reach out through any of the following means:</h6>
       <p>My Email: adebiyijohn07@gmail.com</p>
       <p>LinkedIn: linkedin.com/in/adebiyijohn07</p>
